Add Swagger doc annotation in ProductController, add Request in Paginationable, add function getPaginate in ProductService
